--- a/Inventory/Views/Companies/Create.cshtml
+++ b/Inventory/Views/Companies/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Inventory.Models.Company
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nova";
 }
 
-<h2>Create</h2>
+<h2>@ViewData["Title"]</h2>
 
-<h4>Company</h4>
+<h4>Empresa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </form>
     </div>
