--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Companies" asp-action="Index">Empresas</a></li>
+                    <li><a asp-area="" asp-controller="Employees" asp-action="Index">Colaboradores</a></li>
+                    <li><a asp-area="" asp-controller="Equipments" asp-action="Index">Equipamentos</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
