--- a/Inventory/Views/Companies/Create.cshtml
+++ b/Inventory/Views/Companies/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Inventory.Models.Company
 
 @{
-    ViewData["Title"] = "Nova";
+    ViewData["Title"] = "Nova Empresa";
 }
 
 <h2>@ViewData["Title"]</h2>
 
-<h4>Empresa</h4>
+<!--<h4>Empresa</h4>-->
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
