--- a/Inventory/Views/Equipments/Index.cshtml
+++ b/Inventory/Views/Equipments/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@model IEnumerable<Inventory.Models.Equipment>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Equipamentos";
 }
 
-<h2>Index</h2>
+    <h2>@ViewData["Title"]</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-default">Novo Equipamento</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
-        <tr>
+        <tr class="success">
             <th>
                 @Html.DisplayNameFor(model => model.Equity)
             </th>
