Alterações no serviço e controladora, delete

--- a/Inventory/Views/Home/Contact.cshtml
+++ b/Inventory/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contacto";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<!--<h3>@ViewData["Message"]</h3>-->
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Isaac Giordani da Rocha<br />
+    Resende / RJ<br />
+    <abbr title="Celular">C:</abbr>
+    (24) 98144.5779
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong> <a href="mailto:isaac.giordani@outlook.com">isaac.giordani@outlook.com</a><br />
 </address>
