--- a/Inventory/Views/Companies/Delete.cshtml
+++ b/Inventory/Views/Companies/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Inventory.Models.Company
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Exclusão de Empresa";
 }
 
-<h2>Delete</h2>
+    <h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja remover esta empresa?</h3>
 <div>
-    <h4>Company</h4>
+    <!--<h4>Empresa</h4>-->
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -30,10 +30,12 @@
             @Html.DisplayFor(model => model.Active)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
+        <a asp-action="Index" class="btn btn-default">Voltar</a> |
+
         <input type="hidden" asp-for="CompanyId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+
     </form>
 </div>
