--- a/Inventory/Views/Employees/Delete.cshtml
+++ b/Inventory/Views/Employees/Delete.cshtml
@@ -1,75 +1,75 @@
 ﻿@model Inventory.Models.Employee
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Exclusão de Colaborador";
 }
 
-<h2>Delete</h2>
+    <h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Employee</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Enrollment)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Enrollment)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ExternEmail)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ExternEmail)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.RG)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.RG)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CPF)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CPF)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Registration)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Registration)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.LastUpdate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.LastUpdate)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="EmployeeId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+    <h3>Você tem certeza que deseja remover este colaborador?</h3>
+    <div>
+        <!--<h4>Employee</h4>-->
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Enrollment)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Enrollment)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ExternEmail)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ExternEmail)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.RG)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.RG)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.CPF)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CPF)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Active)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Active)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Registration)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Registration)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastUpdate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastUpdate)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <a asp-action="Index" class="btn btn-default">Voltar</a> |
+            <input type="hidden" asp-for="EmployeeId" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
+    </div>
