--- a/Inventory/Views/Equipments/Delete.cshtml
+++ b/Inventory/Views/Equipments/Delete.cshtml
@@ -1,135 +1,135 @@
 ﻿@model Inventory.Models.Equipment
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Exclusão de Equipamento";
 }
 
-<h2>Delete</h2>
+    <h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Equipment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Equity)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Equity)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.OldEquity)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.OldEquity)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Hostname)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Hostname)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.OldHostname)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.OldHostname)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.MAC)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.MAC)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IP)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IP)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.MEM)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.MEM)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Processor)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Processor)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.HD)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.HD)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.GPU)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.GPU)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Manufacturer)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Manufacturer)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Model)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ServiceTag)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ServiceTag)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SerialNumber)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SerialNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Maintenance)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Maintenance)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Warranty)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Warranty)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.LastUpdate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.LastUpdate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Note)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Note)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="EquipmentId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+    <h3>Você tem certeza que deseja remover este equipamento?</h3>
+    <div>
+        <!--<h4>Equipment</h4>-->
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Equity)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Equity)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.OldEquity)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.OldEquity)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Hostname)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Hostname)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.OldHostname)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.OldHostname)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.MAC)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.MAC)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.IP)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IP)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.MEM)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.MEM)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Processor)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Processor)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.HD)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.HD)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.GPU)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.GPU)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Manufacturer)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Manufacturer)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Model)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Model)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ServiceTag)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ServiceTag)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.SerialNumber)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.SerialNumber)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Maintenance)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Maintenance)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Warranty)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Warranty)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastUpdate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastUpdate)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Note)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Note)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Active)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Active)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <a asp-action="Index" class="btn btn-default">Voltar</a> |
+            <input type="hidden" asp-for="EquipmentId" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
+    </div>
