--- a/Inventory/Views/Home/About.cshtml
+++ b/Inventory/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Sobre o sistema";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<!--<h3>@ViewData["Message"]</h3>-->
 
-<p>Use this area to provide additional information.</p>
+<p>Sistema desenvolvido para armazenar e controlar as informações de equipamentos e seus usuários.</p>
