--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - Inventory</p>
+            <!--<p>&copy; 2020 - Inventory</p>-->
         </footer>
     </div>
 
