--- a/Inventory/Views/Companies/Details.cshtml
+++ b/Inventory/Views/Companies/Details.cshtml
@@ -1,36 +1,36 @@
 ﻿@model Inventory.Models.Company
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe da Empresa";
 }
 
-<h2>Details</h2>
+    <h2>@ViewData["Title"]</h2>
 
-<div>
-    <h4>Company</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CNPJ)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CNPJ)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.CompanyId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <!--<h4>Company</h4>-->
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.CNPJ)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CNPJ)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Active)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Active)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Index" class="btn btn-default">Voltar</a> |
+        <a asp-action="Edit" asp-route-id="@Model.CompanyId" class="btn btn-warning">Editar</a>
+    </div>
