--- a/Inventory/Views/Employees/Details.cshtml
+++ b/Inventory/Views/Employees/Details.cshtml
@@ -1,72 +1,78 @@
 ﻿@model Inventory.Models.Employee
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe do Colaborador";
 }
 
-<h2>Details</h2>
+    <h2>@ViewData["Title"]</h2>
 
+    <div>
+        <!--<h4>Employee</h4>-->
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Company.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Company.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Enrollment)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Enrollment)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ExternEmail)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ExternEmail)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.RG)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.RG)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.CPF)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CPF)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Active)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Active)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Registration)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Registration)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastUpdate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastUpdate)
+            </dd>
+        </dl>
+    </div>
 <div>
-    <h4>Employee</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Enrollment)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Enrollment)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ExternEmail)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ExternEmail)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.RG)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.RG)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CPF)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CPF)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Registration)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Registration)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.LastUpdate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.LastUpdate)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.EmployeeId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Voltar</a> |
+    <a asp-action="Edit" asp-route-id="@Model.EmployeeId" class="btn btn-warning">Editar</a>
 </div>
