--- a/Inventory/Views/Companies/Create.cshtml
+++ b/Inventory/Views/Companies/Create.cshtml
@@ -29,15 +29,13 @@
                     </label>
                 </div>
             </div>
+            <hr />
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-default" />
+                <a asp-action="Index" class="btn btn-default">Voltar</a> |
+                <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
