--- a/Inventory/Views/Home/Contact.cshtml
+++ b/Inventory/Views/Home/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Contacto";
+    ViewData["Title"] = "Contato";
 }
 <h2>@ViewData["Title"]</h2>
 <!--<h3>@ViewData["Message"]</h3>-->
