--- a/Inventory/Views/Shared/Error.cshtml
+++ b/Inventory/Views/Shared/Error.cshtml
@@ -1,10 +1,16 @@
 ﻿@model Inventory.Models.ViewModels.ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Erro!";
 }
+    <div class="text-danger">
+        <h1>Oops.</h1>
+        <h2>Um erro aconteceu ao processar a sua requisição.</h2>        
+    </div>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+    <h2 class="text-warning">
+        <span class="glyphicon glyphicon-alert" aria-hidden="true"> @Model.Message</span>
+    </h2>
+    <hr />
 
 @if (Model.ShowRequestId)
 {
@@ -13,10 +19,3 @@
     </p>
 }
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
